hphp/hack/test/typecheck/readonly/ternary.php.exp
File "ternary.php", line 25, characters 3-14:
This expression is readonly, its members cannot be modified (Parsing[1002])
